--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                   <li><a class="dropdown-item" href="#">Learn</a></li>
                   <li><a class="dropdown-item" href="#">Build</a></li>
                   <li><hr class="dropdown-divider"></li>
-                  <li><a class="dropdown-item" href="#">Suggestion</a></li>
+                  <li><a class="dropdown-item" href="#">Contact Us</a></li>
                 </ul>
               </li>
               <li class="nav-item">
